# vale_search

./: .gitignore  COMPONENT_2_SUMMARY.md  FINAL_STATUS.md  LICENSE  MANIFEST.in  PROJECT_STATUS.md  QUICKSTART.md  README.md  README_technical.md  pyproject.toml  requirements-prod.txt  requirements.txt  setup.py  test_drag_drop.py  test_final_installation.py  test_integration.py  test_simple_integration.py
.github/workflows/: publish-to-pypi.yml
examples/: integration_examples.py  quickstart.py
src/: __init__.py  main.py
src/api/: routes.py  schemas.py
src/retrieval/: __init__.py  hybrid_engine.py  reranker.py
src/utils/: __init__.py
src/valesearch/: __init__.py  cli.py  vale_search.py
src/valesearch/api/: __init__.py
src/valesearch/retrieval/: bm25_search.py  fallback_integration.py  hybrid_engine.py  vector_search.py
src/valesearch/utils/: logger.py
