[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "valesearch"
version = "0.1.0"
authors = [
    {name = "Zyad Djouad", email = "zyaddj@valesolutions.net"},
]
description = "Hybrid cached retrieval engine for RAG systems - Drag-and-drop performance boost"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License", 
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["rag", "retrieval", "cache", "ai", "ml", "nlp", "search", "hybrid", "bm25", "vector", "semantic"]

dependencies = [
    "fastapi>=0.104.1",
    "redis>=5.0.1",
    "rank-bm25>=0.2.2", 
    "sentence-transformers>=2.2.2",
    "numpy>=1.24.3",
    "nltk>=3.8.1",
    "pydantic>=2.4.2",
    "httpx>=0.24.0",
    "scikit-learn>=1.0.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=22.0.0",
    "isort>=5.0.0", 
    "flake8>=5.0.0",
]
server = [
    "uvicorn[standard]>=0.24.0",
]
gpu = [
    "faiss-gpu>=1.7.4",
]

[project.urls]
Homepage = "https://github.com/zyaddj/vale_search"
Repository = "https://github.com/zyaddj/vale_search"
Documentation = "https://github.com/zyaddj/vale_search#readme"
"Bug Tracker" = "https://github.com/zyaddj/vale_search/issues"

[project.scripts]
valesearch = "valesearch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"